--- a/sass/page/_pagecommon.scss
+++ b/sass/page/_pagecommon.scss
@@ -85,7 +85,8 @@
   margin-bottom: 2em;
 
   .pictext_list {
-    display: flex;
+    // display: flex;
+
     // border-bottom: 1px solid #999;
     padding: 1em;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px;
@@ -96,6 +97,7 @@
     border: 2px solid #fff;
     a {
       color: $color-word;
+      display: block;
     }
     &:hover,
     &:focus {
@@ -194,7 +196,7 @@
         span {
           flex: 1 1 auto;
           &.th_title {
-            flex: 0 0 5em;
+            flex: 0 0 8em;
             font-weight: bold;
             text-align: right;
           }
