--- a/sass/common/_print.scss
+++ b/sass/common/_print.scss
@@ -164,10 +164,13 @@
   }
   .table_list {
     table {
+      font-size: 0.875em;
       th {
         white-space: normal;
-        font-size: 0.875em;
       }
+    }
+    .ingredients {
+      width: auto;
     }
   }
 }
