--- a/sass/_c.scss
+++ b/sass/_c.scss
@@ -52,7 +52,7 @@ $thirdColor: #de7a00;
     }
 
     &::after {
-      content: '+';
+      content: '';
       position: absolute;
       width: 20px;
       height: 20px;
@@ -63,9 +63,10 @@ $thirdColor: #de7a00;
       top: 50%;
       transform: translateY(-50%) rotate(0deg);
       transition: 0.3s all ease;
-      background: #333;
+      background: #333 url(../images/icon/icon_add2.svg) no-repeat center center;
+      background-size: 10px auto;
       color: #fff;
-      line-height: 1em;
+      line-height: 1.4em;
       border-radius: 50%;
       font-weight: bold;
     }
