--- a/sass/modual/_header.scss
+++ b/sass/modual/_header.scss
@@ -532,7 +532,7 @@
     width: 350px;
     display: none;
   }
-  .search {
+  .search2 {
     display: flex;
     //   justify-content: flex-end;
     flex-wrap: wrap;
