--- a/sass/page/_pagecommon.scss
+++ b/sass/page/_pagecommon.scss
@@ -79,7 +79,12 @@
     margin: 2em 0 1em;
   }
 }
-
+.pageSearchBtn {
+  // position: absolute;
+  // top: 4em;
+  // left: 2.5em;
+  // margin-top: -50px;
+}
 // 圖文列表
 .pictext_list_block {
   margin-bottom: 2em;
