--- a/sass/page/_pagecommon.scss
+++ b/sass/page/_pagecommon.scss
@@ -360,3 +360,18 @@
     }
   }
 }
+.icon_sort {
+  vertical-align: middle;
+  a {
+    display: inline-block;
+    padding: 0 5px;
+    img {
+      width: 10px;
+      width: 10px;
+    }
+  }
+}
+.keyword {
+  background: #fff000;
+  display: inline-block;
+}
