--- a/sass/modual/_header.scss
+++ b/sass/modual/_header.scss
@@ -350,6 +350,14 @@
       }
     }
   }
+  .explain_text {
+    margin: 5px 0 0;
+    padding: 0.8em;
+    line-height: 1.7em;
+    display: block;
+    background-color: #eee;
+    border-radius: 10px;
+  }
 }
 
 // m_search
