--- a/css/hyui.css
+++ b/css/hyui.css
@@ -10004,6 +10004,7 @@ a.more:hover:after, a.more:focus:after, a.more.active:after {
   position: relative;
   padding: 0.5em 0 0.5em 1.5em;
   border-bottom: solid 1px #eee;
+  align-items: center;
 }
 .file_download li:before {
   content: "·";
@@ -10012,7 +10013,7 @@ a.more:hover:after, a.more:focus:after, a.more.active:after {
   width: 1em;
   height: 1em;
   position: absolute;
-  top: 0.4em;
+  top: 0.3em;
   left: 0.1em;
   color: #666;
 }
@@ -10028,242 +10029,275 @@ a.more:hover:after, a.more:focus:after, a.more.active:after {
   line-height: 1.5em;
   vertical-align: middle;
   color: #666;
-}
-.file_download li .file_name ~ span a {
   color: #fff;
   display: inline-block;
   margin-right: 8px;
 }
-.file_download li span.file_doc a {
+.file_download li span.file_doc {
   color: #fff;
   font-weight: bold;
-  padding: 0.2em 0.8em;
+  padding: 0.3em 0.5em;
   border-radius: 3px;
+  line-height: 1em;
+  height: auto;
+  display: inline-block;
+  vertical-align: middle;
+  margin: 0.2em;
+  font-size: 0.875em;
 }
-.file_download li span.file_doc a:hover, .file_download li span.file_doc a:focus {
-  color: #fff;
-}
-.file_download li span.file_docx a {
+.file_download li span.file_docx {
   color: #fff;
   font-weight: bold;
-  padding: 0.2em 0.8em;
+  padding: 0.3em 0.5em;
   border-radius: 3px;
+  line-height: 1em;
+  height: auto;
+  display: inline-block;
+  vertical-align: middle;
+  margin: 0.2em;
+  font-size: 0.875em;
 }
-.file_download li span.file_docx a:hover, .file_download li span.file_docx a:focus {
-  color: #fff;
-}
-.file_download li span.file_odt a {
+.file_download li span.file_odt {
   color: #fff;
   font-weight: bold;
-  padding: 0.2em 0.8em;
+  padding: 0.3em 0.5em;
   border-radius: 3px;
+  line-height: 1em;
+  height: auto;
+  display: inline-block;
+  vertical-align: middle;
+  margin: 0.2em;
+  font-size: 0.875em;
 }
-.file_download li span.file_odt a:hover, .file_download li span.file_odt a:focus {
-  color: #fff;
-}
-.file_download li span.file_xls a {
+.file_download li span.file_xls {
   color: #fff;
   font-weight: bold;
-  padding: 0.2em 0.8em;
+  padding: 0.3em 0.5em;
   border-radius: 3px;
+  line-height: 1em;
+  height: auto;
+  display: inline-block;
+  vertical-align: middle;
+  margin: 0.2em;
+  font-size: 0.875em;
 }
-.file_download li span.file_xls a:hover, .file_download li span.file_xls a:focus {
-  color: #fff;
-}
-.file_download li span.file_xlsx a {
+.file_download li span.file_xlsx {
   color: #fff;
   font-weight: bold;
-  padding: 0.2em 0.8em;
+  padding: 0.3em 0.5em;
   border-radius: 3px;
+  line-height: 1em;
+  height: auto;
+  display: inline-block;
+  vertical-align: middle;
+  margin: 0.2em;
+  font-size: 0.875em;
 }
-.file_download li span.file_xlsx a:hover, .file_download li span.file_xlsx a:focus {
-  color: #fff;
-}
-.file_download li span.file_csv a {
+.file_download li span.file_csv {
   color: #fff;
   font-weight: bold;
-  padding: 0.2em 0.8em;
+  padding: 0.3em 0.5em;
   border-radius: 3px;
+  line-height: 1em;
+  height: auto;
+  display: inline-block;
+  vertical-align: middle;
+  margin: 0.2em;
+  font-size: 0.875em;
 }
-.file_download li span.file_csv a:hover, .file_download li span.file_csv a:focus {
-  color: #fff;
-}
-.file_download li span.file_ods a {
+.file_download li span.file_ods {
   color: #fff;
   font-weight: bold;
-  padding: 0.2em 0.8em;
+  padding: 0.3em 0.5em;
   border-radius: 3px;
+  line-height: 1em;
+  height: auto;
+  display: inline-block;
+  vertical-align: middle;
+  margin: 0.2em;
+  font-size: 0.875em;
 }
-.file_download li span.file_ods a:hover, .file_download li span.file_ods a:focus {
-  color: #fff;
-}
-.file_download li span.file_ppt a {
+.file_download li span.file_ppt {
   color: #fff;
   font-weight: bold;
-  padding: 0.2em 0.8em;
+  padding: 0.3em 0.5em;
   border-radius: 3px;
+  line-height: 1em;
+  height: auto;
+  display: inline-block;
+  vertical-align: middle;
+  margin: 0.2em;
+  font-size: 0.875em;
 }
-.file_download li span.file_ppt a:hover, .file_download li span.file_ppt a:focus {
-  color: #fff;
-}
-.file_download li span.file_pptx a {
+.file_download li span.file_pptx {
   color: #fff;
   font-weight: bold;
-  padding: 0.2em 0.8em;
+  padding: 0.3em 0.5em;
   border-radius: 3px;
+  line-height: 1em;
+  height: auto;
+  display: inline-block;
+  vertical-align: middle;
+  margin: 0.2em;
+  font-size: 0.875em;
 }
-.file_download li span.file_pptx a:hover, .file_download li span.file_pptx a:focus {
-  color: #fff;
-}
-.file_download li span.file_odp a {
+.file_download li span.file_odp {
   color: #fff;
   font-weight: bold;
-  padding: 0.2em 0.8em;
+  padding: 0.3em 0.5em;
   border-radius: 3px;
+  line-height: 1em;
+  height: auto;
+  display: inline-block;
+  vertical-align: middle;
+  margin: 0.2em;
+  font-size: 0.875em;
 }
-.file_download li span.file_odp a:hover, .file_download li span.file_odp a:focus {
-  color: #fff;
-}
-.file_download li span.file_zip a {
+.file_download li span.file_zip {
   color: #fff;
   font-weight: bold;
-  padding: 0.2em 0.8em;
+  padding: 0.3em 0.5em;
   border-radius: 3px;
+  line-height: 1em;
+  height: auto;
+  display: inline-block;
+  vertical-align: middle;
+  margin: 0.2em;
+  font-size: 0.875em;
 }
-.file_download li span.file_zip a:hover, .file_download li span.file_zip a:focus {
-  color: #fff;
-}
-.file_download li span.file_txt a {
+.file_download li span.file_txt {
   color: #fff;
   font-weight: bold;
-  padding: 0.2em 0.8em;
+  padding: 0.3em 0.5em;
   border-radius: 3px;
+  line-height: 1em;
+  height: auto;
+  display: inline-block;
+  vertical-align: middle;
+  margin: 0.2em;
+  font-size: 0.875em;
 }
-.file_download li span.file_txt a:hover, .file_download li span.file_txt a:focus {
-  color: #fff;
-}
-.file_download li span.file_mov a {
+.file_download li span.file_mov {
   color: #fff;
   font-weight: bold;
-  padding: 0.2em 0.8em;
+  padding: 0.3em 0.5em;
   border-radius: 3px;
+  line-height: 1em;
+  height: auto;
+  display: inline-block;
+  vertical-align: middle;
+  margin: 0.2em;
+  font-size: 0.875em;
 }
-.file_download li span.file_mov a:hover, .file_download li span.file_mov a:focus {
-  color: #fff;
-}
-.file_download li span.file_mp3 a {
+.file_download li span.file_mp3 {
   color: #fff;
   font-weight: bold;
-  padding: 0.2em 0.8em;
+  padding: 0.3em 0.5em;
   border-radius: 3px;
+  line-height: 1em;
+  height: auto;
+  display: inline-block;
+  vertical-align: middle;
+  margin: 0.2em;
+  font-size: 0.875em;
 }
-.file_download li span.file_mp3 a:hover, .file_download li span.file_mp3 a:focus {
-  color: #fff;
-}
-.file_download li span.file_jpg a {
+.file_download li span.file_jpg {
   color: #fff;
   font-weight: bold;
-  padding: 0.2em 0.8em;
+  padding: 0.3em 0.5em;
   border-radius: 3px;
+  line-height: 1em;
+  height: auto;
+  display: inline-block;
+  vertical-align: middle;
+  margin: 0.2em;
+  font-size: 0.875em;
 }
-.file_download li span.file_jpg a:hover, .file_download li span.file_jpg a:focus {
-  color: #fff;
-}
-.file_download li span.file_wmv a {
+.file_download li span.file_wmv {
   color: #fff;
   font-weight: bold;
-  padding: 0.2em 0.8em;
+  padding: 0.3em 0.5em;
   border-radius: 3px;
+  line-height: 1em;
+  height: auto;
+  display: inline-block;
+  vertical-align: middle;
+  margin: 0.2em;
+  font-size: 0.875em;
 }
-.file_download li span.file_wmv a:hover, .file_download li span.file_wmv a:focus {
-  color: #fff;
-}
-.file_download li span.file_mp4 a {
+.file_download li span.file_mp4 {
   color: #fff;
   font-weight: bold;
-  padding: 0.2em 0.8em;
+  padding: 0.3em 0.5em;
   border-radius: 3px;
+  line-height: 1em;
+  height: auto;
+  display: inline-block;
+  vertical-align: middle;
+  margin: 0.2em;
+  font-size: 0.875em;
 }
-.file_download li span.file_mp4 a:hover, .file_download li span.file_mp4 a:focus {
-  color: #fff;
-}
-.file_download li span.file_pdf a {
+.file_download li span.file_pdf {
   color: #fff;
   font-weight: bold;
-  padding: 0.2em 0.8em;
+  padding: 0.3em 0.5em;
   border-radius: 3px;
+  line-height: 1em;
+  height: auto;
+  display: inline-block;
+  vertical-align: middle;
+  margin: 0.2em;
+  font-size: 0.875em;
 }
-.file_download li span.file_pdf a:hover, .file_download li span.file_pdf a:focus {
-  color: #fff;
-}
-.file_download li span.file_other a {
+.file_download li span.file_other {
   color: #fff;
   font-weight: bold;
-  padding: 0.2em 0.8em;
+  padding: 0.3em 0.5em;
   border-radius: 3px;
+  line-height: 1em;
+  height: auto;
+  display: inline-block;
+  vertical-align: middle;
+  margin: 0.2em;
+  font-size: 0.875em;
 }
-.file_download li span.file_other a:hover, .file_download li span.file_other a:focus {
-  color: #fff;
-}
-.file_download li span.file_doc a, .file_download li span.file_docx a, .file_download li span.file_odt a {
+.file_download li span.file_doc, .file_download li span.file_docx, .file_download li span.file_odt {
   background: #275cb7;
 }
-.file_download li span.file_doc a:hover, .file_download li span.file_doc a:focus, .file_download li span.file_docx a:hover, .file_download li span.file_docx a:focus, .file_download li span.file_odt a:hover, .file_download li span.file_odt a:focus {
-  background: #2351a2;
-}
-.file_download li span.file_xls a, .file_download li span.file_xlsx a, .file_download li span.file_csv a, .file_download li span.file_ods a {
+.file_download li span.file_xls, .file_download li span.file_xlsx, .file_download li span.file_csv, .file_download li span.file_ods {
   background: #387947;
 }
-.file_download li span.file_xls a:hover, .file_download li span.file_xls a:focus, .file_download li span.file_xlsx a:hover, .file_download li span.file_xlsx a:focus, .file_download li span.file_csv a:hover, .file_download li span.file_csv a:focus, .file_download li span.file_ods a:hover, .file_download li span.file_ods a:focus {
-  background: #30683d;
-}
-.file_download li span.file_ppt a, .file_download li span.file_pptx a, .file_download li span.file_odp a, .file_download li span.file_pdf a {
+.file_download li span.file_ppt, .file_download li span.file_pptx, .file_download li span.file_odp, .file_download li span.file_pdf {
   background: #c55a3b;
 }
-.file_download li span.file_ppt a:hover, .file_download li span.file_ppt a:focus, .file_download li span.file_pptx a:hover, .file_download li span.file_pptx a:focus, .file_download li span.file_odp a:hover, .file_download li span.file_odp a:focus, .file_download li span.file_pdf a:hover, .file_download li span.file_pdf a:focus {
-  background: #b25135;
-}
-.file_download li span.file_pdf a {
+.file_download li span.file_pdf {
   background: #c00;
 }
-.file_download li span.file_pdf a:hover, .file_download li span.file_pdf a:focus {
-  background: #b30000;
-}
-.file_download li span.file_zip a {
+.file_download li span.file_zip {
   background: #eb712e;
 }
-.file_download li span.file_zip a:hover, .file_download li span.file_zip a:focus {
-  background: #e96117;
-}
-.file_download li span.file_txt a, .file_download li span.file_other a {
+.file_download li span.file_txt, .file_download li span.file_other {
   background: #555;
 }
-.file_download li span.file_txt a:hover, .file_download li span.file_txt a:focus, .file_download li span.file_other a:hover, .file_download li span.file_other a:focus {
-  background: #484848;
-}
-.file_download li span.file_mov a {
+.file_download li span.file_mov {
   background: #009999;
 }
-.file_download li span.file_mov a:hover, .file_download li span.file_mov a:focus {
-  background: teal;
-}
-.file_download li span.file_mp3 a, .file_download li span.file_mp4 a {
+.file_download li span.file_mp3, .file_download li span.file_mp4 {
   background: #088ecc;
 }
-.file_download li span.file_mp3 a:hover, .file_download li span.file_mp3 a:focus, .file_download li span.file_mp4 a:hover, .file_download li span.file_mp4 a:focus {
-  background: #077db3;
-}
-.file_download li span.file_jpg a {
+.file_download li span.file_jpg {
   background: #6c29a4;
 }
-.file_download li span.file_jpg a:hover, .file_download li span.file_jpg a:focus {
-  background: #5f2490;
-}
-.file_download li span.file_wmv a {
+.file_download li span.file_wmv {
   background: #430a1f;
 }
-.file_download li span.file_wmv a:hover, .file_download li span.file_wmv a:focus {
-  background: #2d0715;
+.file_download li span.kbtxt {
+  font-size: 0.875em;
+  color: #333;
+  display: inline-block;
+  vertical-align: middle;
+  margin: 0 1em 0 0;
+  line-height: 2em;
 }
 
 .web_link {
